<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ionicframework.KiooskSharj.TopupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundLight"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:paddingStart="10sp"
                android:text="@string/phone_number"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="09xxxxxxxxx"
                android:inputType="phone"
                android:padding="10sp"
                android:textDirection="ltr"
                android:theme="@style/CustomEditText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:paddingStart="10sp"
                android:text="@string/charge_amount"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/charge_amount"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:padding="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:paddingStart="10sp"
                android:text="@string/awesome_charge"
                android:textSize="16sp" />

            <Switch
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:padding="10sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_gateway"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:padding="10sp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:src="@drawable/saman" />

                <RadioButton
                    android:id="@+id/saman_gateway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95"
                    android:checked="true"
                    android:layoutDirection="ltr"
                    android:text="@string/saman_gateway"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:padding="10sp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:src="@drawable/mellat" />

                <RadioButton
                    android:id="@+id/mellat_gateway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95"
                    android:layoutDirection="ltr"
                    android:padding="10sp"
                    android:text="@string/mellat_gateway"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:padding="10sp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:src="@drawable/zarinpal" />

                <RadioButton
                    android:id="@+id/zarrinpal_gateway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95"
                    android:layoutDirection="ltr"
                    android:padding="10sp"
                    android:text="@string/zarinpal_gateway"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:textSize="28sp"
                android:textColor="@color/colorSecondaryText"
                android:drawableRight="@drawable/ic_shop"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20sp"
                android:background="@drawable/rounded_button"
                android:padding="15sp"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
